logs/cpp/pseudonym117/ninja.log
[1/2] Building CXX object CMakeFiles/out.dir/main.cpp.o
FAILED: CMakeFiles/out.dir/main.cpp.o 
ccache /usr/bin/c++   -O3 -DNDEBUG -std=c++20 -MD -MT CMakeFiles/out.dir/main.cpp.o -MF CMakeFiles/out.dir/main.cpp.o.d -o CMakeFiles/out.dir/main.cpp.o -c /home/stelar7/advent-of-code-runner/2023/1/solutions/cpp/pseudonym117/main.cpp
/home/stelar7/advent-of-code-runner/2023/1/solutions/cpp/pseudonym117/main.cpp:27:43: error: incomplete type ‘std::numeric_limits<int>’ used in nested name specifier
   27 |     int value = std::numeric_limits<int>::min();
      |                                           ^~~
/home/stelar7/advent-of-code-runner/2023/1/solutions/cpp/pseudonym117/main.cpp: In member function ‘TrieNode::operator bool() const’:
/home/stelar7/advent-of-code-runner/2023/1/solutions/cpp/pseudonym117/main.cpp:30:71: error: incomplete type ‘std::numeric_limits<int>’ used in nested name specifier
   30 |     operator bool() const { return value != std::numeric_limits<int>::min(); }
      |                                                                       ^~~
ninja: build stopped: subcommand failed.
